Fix the duplciate command paths