@@ -12,6 +12,8 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
@@ -53,6 +55,9 @@ import java.util.concurrent.atomic.AtomicLong;
 public class CommandParameter {
 
     private static final AtomicLong ENUM_COUNTER = new AtomicLong();
+    private static final Map<EnumSignature, String> ENUM_NAMES = new ConcurrentHashMap<>();
+
+    private record EnumSignature(String name, List<String> values) {}
 
     /**
      * An empty array of CommandParameter, used for commands with no arguments.
@@ -214,7 +219,7 @@ public class CommandParameter {
      * @see #newEnum(String, boolean, CommandEnum)
      */
     public static CommandParameter newEnum(String name, boolean optional, String[] values) {
-        return newEnum(name, optional, new CommandEnum(name + "Enums_" + ENUM_COUNTER.incrementAndGet(), values));
+        return newEnum(name, optional, values, false);
     }
 
     /**
@@ -228,7 +233,9 @@ public class CommandParameter {
      * @see #newEnum(String, boolean, CommandEnum)
      */
     public static CommandParameter newEnum(String name, boolean optional, String[] values, boolean soft) {
-        return newEnum(name, optional, new CommandEnum(name + "Enums_" + ENUM_COUNTER.incrementAndGet(), Arrays.asList(values), soft));
+        String enumName = soft ? name + "Enums_" + ENUM_COUNTER.incrementAndGet()
+                : ENUM_NAMES.computeIfAbsent(new EnumSignature(name, List.copyOf(Arrays.asList(values))), ignored -> name + "Enums_" + ENUM_COUNTER.incrementAndGet());
+        return newEnum(name, optional, new CommandEnum(enumName, Arrays.asList(values), soft));
     }
 
     /**
